--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,7 +28,7 @@
                     <%= link_to 'ユーザー',public_users_path, class: 'nav-link text-dark border rounded' %>
                   </li>
                   <li class="nav-item mx-3">
-                    <%= link_to '投稿',public_posts_path, class: 'nav-link text-dark border rounded' %>
+                    <%= link_to '投稿一覧',public_posts_path, class: 'nav-link text-dark border rounded' %>
                   </li>
                   <li class="nav-item mx-3">
                     <%= link_to 'ブックマーク',favorites_public_user_path(@current_user), class: 'nav-link text-dark border rounded' %>
