--- a/app/views/public/posts/index.html.erb
+++ b/app/views/public/posts/index.html.erb
@@ -3,7 +3,11 @@
   <!--サイドバー-->
   <div class="col-3 mb-5 border-right border-info">
     <%= render partial: 'public/homes/current_user_info',locals: { current_user: @current_user } %><br>
+    <%= form_tag({controller:"posts",action:"index"}, method: :get) do %>
+      <%= render partial: 'tag_search' %>
+    <% end %>
   </div>
+
 
   <div class="col-9">
   <div class="d-flex justify-content-center">
