[add]タグ検索ユーザー投稿一覧追加

--- a/app/views/public/posts/user_index.html.erb
+++ b/app/views/public/posts/user_index.html.erb
@@ -1,15 +1,16 @@
 <div class="container row">
 
   <!--サイドバー-->
-<% if @post.user.id == @current_user.id %>
   <div class="col-3 mb-5 border-right border-info">
-    <%= render partial: 'public/homes/current_user_info',locals: { current_user: @current_user } %><br>
+    <% if @post.user.id == @current_user.id %>
+      <%= render partial: 'public/homes/current_user_info',locals: { current_user: @current_user } %><br>
+    <% else %>
+      <%= render partial: 'user_info',locals: { post: @post } %><br>
+    <% end %>
+    <%= form_tag({controller:"posts",action:"user_index"}, method: :get) do %>
+      <%= render partial: 'tag_search' %>
+    <% end %>
   </div>
-<% else %>
-  <div class="col-3 mb-5 border-right border-info">
-    <%= render partial: 'user_info',locals: { post: @post } %><br>
-  </div>
-<% end %>
 
 <!--メイン-->
 <!--自分の投稿-->
