[create]キーワード検索

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -61,12 +61,12 @@
           </div>
           <!--検索窓-->
             <div class="search-form col-2 py-1 px-1 my-2 mr-3 ml-auto border border-secondary">
-              <!--<= form_tag({controller:"public/posts", action:"index"}, method: :get) do %>-->
+              <%= form_tag({controller:"public/posts", action:"index"}, method: :get) do %>
                 <%= text_field_tag( "search","",{ placeholder: "Search", class: "p-0 col-10", style: "border: none" }) %>
                 <%= button_tag type: 'submit', class: 'btn btn-outline-info px-1 py-0 col-1', style: "border: none" do %>
                   <i class="fa-solid fa-magnifying-glass"></i>
                 <% end %>
-              <!--< end %>-->
+              <% end %>
             </div>
             <!------->
         </div>
