[create]adminサインイン後ヘッダー分岐設定

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,6 +22,9 @@
               <ul class="navbar-nav ml-auto">
                 <% if user_signed_in? %>
                   <li class="nav-item mx-3">
+                    <%= link_to 'TOP',public_root_path, class: 'nav-link text-dark border rounded' %>
+                  </li>
+                  <li class="nav-item mx-3">
                     <%= link_to 'マイページ',public_user_path(@current_user), class: 'nav-link text-dark border rounded' %>
                   </li>
                   <li class="nav-item mx-3">
@@ -32,6 +35,13 @@
                   </li>
                   <li class="nav-item mx-3">
                     <%= link_to 'ブックマーク',favorites_public_user_path(@current_user), class: 'nav-link text-dark border rounded' %>
+                  </li>
+                  <li class="nav-item mx-3">
+                    <%= link_to 'ログアウト',destroy_user_session_path, method: :delete, class: 'nav-link text-dark border rounded'%>
+                  </li>
+                <% elsif admin_signed_in? %>
+                  <li class="nav-item mx-3">
+                    <%= link_to 'ユーザー',public_users_path, class: 'nav-link text-dark border rounded' %>
                   </li>
                   <li class="nav-item mx-3">
                     <%= link_to 'ログアウト',destroy_user_session_path, method: :delete, class: 'nav-link text-dark border rounded'%>
@@ -62,7 +72,7 @@
           <!--検索窓-->
             <div class="search-form col-2 py-1 px-1 my-2 mr-3 ml-auto border border-secondary">
               <%= form_tag({controller:"public/posts", action:"index"}, method: :get) do %>
-                <%= text_field_tag( "search","",{ placeholder: "Search", class: "p-0 col-10", style: "border: none" }) %>
+                <%= text_field_tag( "search","",{ placeholder: "キーワード検索", class: "p-0 col-10", style: "border: none" }) %>
                 <%= button_tag type: 'submit', class: 'btn btn-outline-info px-1 py-0 col-1', style: "border: none" do %>
                   <i class="fa-solid fa-magnifying-glass"></i>
                 <% end %>
