--- a/app/views/public/posts/_tag_search.html.erb
+++ b/app/views/public/posts/_tag_search.html.erb
@@ -6,6 +6,6 @@
 　  <% end %>
 　</div>
 　<div class="d-flex justify-content-center">
-　  <div><%= submit_tag '検索', class: 'btn btn-outline-success' %></div>
+　  <div><%= submit_tag '検索', class: 'btn btn-outline-info' %></div>
 　 </div>
 </div>
