--- a/app/views/admin/users/edit.html.erb
+++ b/app/views/admin/users/edit.html.erb
@@ -1,2 +1,59 @@
-<h1>Admin::Users#edit</h1>
-<p>Find me in app/views/admin/users/edit.html.erb</p>
+<div class="container row">
+
+  <div class="col-12 my-3 ">
+    <div class=" d-flex justify-content-around">
+      <div class="h5">ユーザー情報編集ページ</div>
+    </div>
+
+    <%= form_with model: @user, url: admin_user_path, method: :patch do |f| %>
+    <div class="col-10  my-5 mx-auto">
+
+      <div class="d-flex bd-highlight my-5">
+        <div class="bd-highlight col-5 px-0 text-info">
+          ニックネーム
+        </div>
+        <div class="flex-grow-1 bd-highlight h5">
+          <%= f.text_field :nickname, class: 'col-12 px-1' %>
+        </div>
+      </div>
+
+      <div class="d-flex bd-highlight my-5">
+        <div class="bd-highlight col-5 px-0 text-info">
+          アイコン画像
+        </div>
+        <div class="flex-grow-1 bd-highlight ">
+          <%= f.file_field :image, accept: "image/*" %>
+        </div>
+      </div>
+
+      <div class="d-flex bd-highlight my-5">
+        <div class="bd-highlight col-5 px-0 text-info">
+          メールアドレス
+        </div>
+        <div class="flex-grow-1 bd-highlight h5">
+          <%= f.text_field :email, class: 'col-12 px-1' %>
+        </div>
+      </div>
+
+      <div class="d-flex bd-highlight my-5">
+        <div class="bd-highlight col-5 px-0 text-info">
+          会員ステータス
+        </div>
+        <div class="flex-grow-1 bd-highlight h5">
+          <div class="d-flex justify-content-around">
+            <div><%= f.radio_button :is_deleted,"false" %> 有効</div>
+            <div><%= f.radio_button :is_deleted,"true" %> 退会</div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="d-flex justify-content-center mb-4">
+      <div>
+        <%= f.submit '変更を保存', class: 'btn btn-outline-success' %>
+      </div>
+    </div>
+    <% end %>
+  </div>
+
+</div>
