--- a/app/views/admin/users/show.html.erb
+++ b/app/views/admin/users/show.html.erb
@@ -1,2 +1,51 @@
-<h1>Admin::Users#show</h1>
-<p>Find me in app/views/admin/users/show.html.erb</p>
+<div class="container row">
+
+  <div class="col-9 my-3">
+    <div class="d-flex justify-content-center">
+      <div class="h5">ユーザーページ</div>
+    </div>
+
+    <div class="col-10  my-5 mx-auto">
+      <div class="d-flex bd-highlight my-5">
+        <div class="bd-highlight col-5 px-0 text-info">
+          ニックネーム
+        </div>
+        <div class="bd-highlight col-1"></div>
+        <div class="flex-grow-1 bd-highlight h5">
+          <%= @user.nickname %>
+        </div>
+      </div>
+
+      <div class="d-flex bd-highlight my-5">
+        <div class="bd-highlight col-5 px-0 text-info">
+          アイコン画像
+        </div>
+        <div class="bd-highlight col-1"></div>
+        <div class="flex-grow-1 bd-highlight ">
+          <%= image_tag @user.get_icon_image(100,100), class: 'border rounded-circle' %>
+        </div>
+      </div>
+
+      <div class="d-flex bd-highlight my-5">
+        <div class="bd-highlight col-5 px-0 text-info">
+          メールアドレス
+        </div>
+        <div class="bd-highlight col-1"></div>
+        <div class="flex-grow-1 bd-highlight h5">
+          <%= @user.email %>
+        </div>
+      </div>
+    </div>
+
+    <div class="d-flex justify-content-center mb-4">
+      <div>
+        <%= link_to 'ユーザー情報編集ページへ', edit_admin_user_path(@user), class: 'btn btn-outline-success' %>
+      </div>
+      <div class="d-flex justify-content-end">
+          <!--<div><= link_to 'ユーザーの投稿一覧を見る',admin_user_posts_path(@user.id), class: 'btn btn-outline-secondary ml-5' %></div>-->
+      </div>
+    </div>
+
+  </div>
+
+</div>
