--- a/app/views/admin/users/show.html.erb
+++ b/app/views/admin/users/show.html.erb
@@ -1,6 +1,6 @@
 <div class="container row">
 
-  <div class="col-9 my-3">
+  <div class="col-9 my-3 mx-auto">
     <div class="d-flex justify-content-center">
       <div class="h5">ユーザーページ</div>
     </div>
@@ -41,9 +41,12 @@
       <div>
         <%= link_to 'ユーザー情報編集ページへ', edit_admin_user_path(@user), class: 'btn btn-outline-success' %>
       </div>
-      <div class="d-flex justify-content-end">
-          <!--<div><= link_to 'ユーザーの投稿一覧を見る',admin_user_posts_path(@user.id), class: 'btn btn-outline-secondary ml-5' %></div>-->
-      </div>
+    </div>
+
+    <div class="d-flex justify-content-around mb-4">
+      <div class="btn btn-secondary disabled" aria-disabled="true">投稿</div>
+      <div><%= link_to '投稿一覧を見る',admin_posts_path(@user.id), class: 'btn btn-outline-secondary' %></div>
+      <div><%= link_to 'コメント一覧を見る',admin_posts_path(@user.id), class: 'btn btn-outline-secondary' %></div>
     </div>
 
   </div>
