--- a/app/views/admin/users/show.html.erb
+++ b/app/views/admin/users/show.html.erb
@@ -26,7 +26,7 @@
         </div>
       </div>
 
-      <div class="d-flex bd-highlight my-5">
+      <div class="d-flex bd-highlight mt-5 mb-3">
         <div class="bd-highlight col-5 px-0 text-info">
           メールアドレス
         </div>
@@ -37,16 +37,16 @@
       </div>
     </div>
 
-    <div class="d-flex justify-content-center mb-4">
+    <div class="d-flex justify-content-center mb-5">
       <div>
         <%= link_to 'ユーザー情報編集ページへ', edit_admin_user_path(@user), class: 'btn btn-outline-success' %>
       </div>
     </div>
 
-    <div class="d-flex justify-content-around mb-4">
+    <div class="d-flex justify-content-around my-5">
       <div class="btn btn-secondary disabled" aria-disabled="true">投稿</div>
       <div><%= link_to '投稿一覧を見る',admin_posts_path(@user.id), class: 'btn btn-outline-secondary' %></div>
-      <div><%= link_to 'コメント一覧を見る',admin_posts_path(@user.id), class: 'btn btn-outline-secondary' %></div>
+      <div><%= link_to 'コメント一覧を見る',admin_post_comments_path(@user.id), class: 'btn btn-outline-secondary' %></div>
     </div>
 
   </div>
