--- a/app/views/public/homes/top.html.erb
+++ b/app/views/public/homes/top.html.erb
@@ -3,6 +3,7 @@
   <!--サイドバー-->
   <div class="col-5 mb-5 border-right border-info">
     <%= render partial: 'current_user_info',locals: { current_user: @current_user } %><br>
+    <%= render partial: 'calendar' ,locals: { events: @events } %><br>
     <%= render partial: 'public/posts/new',locals: { new_post: @new_post } %>
   </div>
 
@@ -12,6 +13,7 @@
       今日の目標は「▲▲」です。<br>
       一日を振り返って、達成度を投稿しましょう！
     </div>
+
   </div>
 
 
