--- a/app/views/public/homes/top.html.erb
+++ b/app/views/public/homes/top.html.erb
@@ -3,7 +3,7 @@
   <!--サイドバー-->
   <div class="col-5 mb-5 border-right border-info">
     <%= render partial: 'current_user_info',locals: { current_user: @current_user } %><br>
-    <%= render partial: 'calendar' ,locals: { events: @events } %><br>
+    <%= render partial: 'calendar' ,locals: { posts: @posts } %><br>
     <%= render partial: 'public/posts/new',locals: { new_post: @new_post } %>
   </div>
 
