--- a/app/views/public/homes/top.html.erb
+++ b/app/views/public/homes/top.html.erb
@@ -1,8 +1,8 @@
 <div class="container row">
 
   <!--サイドバー-->
-  <div class="col-5 mb-5 border-right border-info">
-    <%= render partial: 'current_user_info',locals: { current_user: @current_user } %><br>
+  <div class="col-5 mb-5 pr-4 border-right border-info">
+    <%= render partial: 'layouts/user_info',locals: { user: @user } %><br>
     <%= render partial: 'calendar' ,locals: { posts: @posts } %><br>
     <%= render partial: 'public/posts/new',locals: { new_post: @new_post } %>
   </div>
