[add]メール送信設定

--- a/app/views/public/inquiries/mail_done.html.erb
+++ b/app/views/public/inquiries/mail_done.html.erb
@@ -1,1 +1,6 @@
-<di>お問い合わせフォームの送信が完了しました</div>
+  <div class="mail_done">
+    <div class="border border-info m-5 p-5 col-6 mx-auto">
+      <p>ありがとうございました。</p>
+      <p>お問い合わせフォームの送信が完了しました。</p>
+    </div>
+  </div>
