--- a/app/views/public/homes/top.html.erb
+++ b/app/views/public/homes/top.html.erb
@@ -2,16 +2,34 @@
 
   <!--サイドバー-->
   <div class="col-5 mb-5 pr-4 border-right border-info">
-    <%= render partial: 'layouts/user_info',locals: { user: @user } %><br>
+    <%= render partial: 'layouts/user_info',locals: { user: @user, goal: @goal } %><br>
     <%= render partial: 'calendar' ,locals: { posts: @posts } %><br>
     <%= render partial: 'public/posts/new',locals: { new_post: @new_post } %>
   </div>
 
-  <div class="d-flex justify-content-center col-7">
-    <div class="col-12 border border-info mb-4 p-4">
+  <div class="d-felx flex-column  col-7">
+    <div class="border border-info mb-4 p-4">
       こんにちは、<%= @current_user.nickname %>さん！<br>
       今日の目標は「▲▲」です。<br>
       一日を振り返って、達成度を投稿しましょう！
+    </div>
+    <div class="border border-primary mt-4 p-4">
+      <div class="h5 text-primary">現在の目標</div>
+      <div class="d-flex bd-highlight py-2">
+        <div class="bd-highlight text-info">最終目標　　：　</div>
+        <div class="bd-highlight"><%= @present_goal %></div>
+        <div class="bd-highlight ml-auto">編集する</div>
+      </div>
+      <div class="d-flex bd-highlight py-2">
+        <div class="bd-highlight text-info">今月の目標　：　</div>
+        <div class="bd-highlight"><%= @objective_month %></div>
+        <div class="bd-highlight ml-auto">編集する</div>
+      </div>
+      <div class="d-flex bd-highlight py-2">
+        <div class="bd-highlight text-info">今週の目標　：　</div>
+        <div class="bd-highlight"><%= @objective_week %></div>
+        <div class="bd-highlight ml-auto">編集する</div>
+      </div>
     </div>
 
   </div>
