--- a/app/views/public/users/show.html.erb
+++ b/app/views/public/users/show.html.erb
@@ -1,31 +1,29 @@
 <div class="container row">
 
   <!--サイドバー-->
-  <div class="col-3 mb-5 border-right border-info">
-    <%= render partial: 'layouts/user_info',locals: { user: @user } %><br>
+  <div class="col-4 mb-5 border-right border-info">
+    <%= render partial: 'layouts/user_info',locals: { user: @user,goal: @goal } %><br>
   </div>
 
-  <div class="col-9 my-3">
+  <div class="col-8 my-3">
     <div class="d-flex justify-content-center">
       <div class="h5">ユーザーページ</div>
     </div>
 
     <div class="col-10  my-5 mx-auto">
       <div class="d-flex bd-highlight my-5">
-        <div class="bd-highlight col-5 px-0 text-info">
+        <div class="bd-highlight col-4 px-0 text-info">
           ニックネーム
         </div>
-        <div class="bd-highlight col-1"></div>
         <div class="flex-grow-1 bd-highlight h5">
           <%= @user.nickname %>
         </div>
       </div>
 
       <div class="d-flex bd-highlight my-5">
-        <div class="bd-highlight col-5 px-0 text-info">
+        <div class="bd-highlight col-4 px-0 text-info">
           アイコン画像
         </div>
-        <div class="bd-highlight col-1"></div>
         <div class="flex-grow-1 bd-highlight ">
           <%= image_tag @user.get_icon_image(100,100), class: 'border rounded-circle' %>
         </div>
@@ -33,10 +31,9 @@
 
       <% if @user == @current_user %>
         <div class="d-flex bd-highlight my-5">
-          <div class="bd-highlight col-5 px-0 text-info">
+          <div class="bd-highlight col-4 px-0 text-info">
             メールアドレス
           </div>
-          <div class="bd-highlight col-1"></div>
           <div class="flex-grow-1 bd-highlight h5">
             <%= @user.email %>
           </div>
@@ -44,15 +41,14 @@
       <% end %>
 
       <div class="d-flex bd-highlight my-5">
-        <div class="bd-highlight col-5 px-0 text-info">
+        <div class="bd-highlight col-4 px-0 text-info">
           目標
         </div>
-        <div class="bd-highlight col-1"></div>
         <div class="flex-grow-1 bd-highlight h5">
           <% if @goal.present? %>
-            <%= @goal.goal %>
+            <%= @goal.title %>
           <% else %>
-            目標が設定されていません
+            目標が設定されていません　<%= link_to '設定する', new_public_goal_path, class: 'btn btn-outline-info' %>
           <% end %>
         </div>
       </div>
