--- a/app/views/public/inquiries/mail_done.html.erb
+++ b/app/views/public/inquiries/mail_done.html.erb
@@ -1,6 +1,9 @@
-  <div class="mail_done">
-    <div class="border border-info m-5 p-5 col-6 mx-auto">
-      <p>ありがとうございました。</p>
-      <p>お問い合わせフォームの送信が完了しました。</p>
-    </div>
+<div class="mail_done">
+  <div class="border border-info m-5 p-5 col-6 mx-auto">
+    <p>ありがとうございました。</p>
+    <p>お問い合わせフォームの送信が完了しました。</p>
   </div>
+  <div class="mb-5 col-2 mx-auto">
+    <%= link_to 'TOPに戻る', public_root_path, class: 'btn btn-outline-info' %>
+  </div>
+</div>
