[add]ユーザーの退会処理（論理削除）

--- a/app/views/public/users/edit.html.erb
+++ b/app/views/public/users/edit.html.erb
@@ -4,7 +4,7 @@
     <div class=" d-flex justify-content-around">
       <div class="h5">ユーザー情報編集ページ</div>
       <div>
-         <%= link_to '退会する', edit_public_user_path(@user), class: 'btn btn-outline-danger' %>
+         <%= link_to '退会する', public_user_withdrawal_path(@user), class: 'btn btn-outline-danger' %>
       </div>
     </div>
 
