--- a/app/views/public/users/favorites.html.erb
+++ b/app/views/public/users/favorites.html.erb
@@ -2,13 +2,13 @@
 
   <!--サイドバー-->
   <div class="col-3 mb-5 border-right border-info">
-    <%= render partial: 'layouts/user_info',locals: { user: @user } %><br>
+    <%= render partial: 'layouts/user_info',locals: { user: @user, goal: @goal } %><br>
   </div>
 
 
 <!--メイン-->
   <div class="col-9">
-    
+
     <div class="d-flex justify-content-center">
       <div class="h5">
         <% if @type.present? %>
@@ -18,7 +18,7 @@
         <% end %>
       </div>
     </div>
-    
+
     <div class="d-flex justify-content-around mt-3 mb-5">
       <div>
         <%= link_to 'ALL',favorites_public_user_path(@current_user), class: 'btn btn-outline-info' %>
@@ -46,7 +46,7 @@
         <%= render partial: 'layouts/post_partial/footline_go_to_show',locals: { post: post, user: @user, current_user: @current_user }  %>
       <% end %>
     </div>
-    
+
   </div>
 
 </div>
